--- a/AngularJS/19.8.19/Part2/counter.html
+++ b/AngularJS/19.8.19/Part2/counter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!-- <script src="jquery.min.js"></script> -->
+	<script src="jquery.min.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $('.counter').counterUp({
